trunk/Archive2/22/29b5698e968fbb/output
main.cpp:11:1: error: 'friend' used outside of class
 friend void foo(){ std::cout << a << std::endl; }
 ^
main.cpp: In function 'void foo()':
main.cpp:11:33: error: 'a' was not declared in this scope
 friend void foo(){ std::cout << a << std::endl; }
                                 ^
